--- a/to_do_app/app/views/tasks/index.html.erb
+++ b/to_do_app/app/views/tasks/index.html.erb
@@ -1,4 +1,6 @@
+
 <% @tasks.each do |task| %>
-	<h2><%= task.title %></h2>
+	<h2><%= link_to task.title, task %></h2>
 	<p><%= time_ago_in_words(task.created_at) %></p>
+	<%= link_to 'New task', new_task_path %>
 	<% end %>
