--- a/to_do_app/app/views/tasks/show.html.erb
+++ b/to_do_app/app/views/tasks/show.html.erb
@@ -1,4 +1,6 @@
 <h1><%= @task.title %></h1>
 <p><%= @task.content %></p>
+<p><%= link_to "Back to all tasks", tasks_path %></p>
 
-<p><%= link_to "Back to all tasks", task_path %></p>
+<%= link_to "Edit", edit_task_path(@task) %>
+<%= link_to "Delete", task_path(@task), method: :delete, data: {confirm: "Are you sure you want to delete this task?"} %>
