--- a/to_do_app/app/views/welcome/index.html.erb
+++ b/to_do_app/app/views/welcome/index.html.erb
@@ -1,1 +1,5 @@
-<h1>This is the Welcome Page</h1>
+<div id="banner">
+	<h1>ToDo</h1>
+		<p>Keepin' Track of Thingz</p>
+		<button id="signup"><%= link_to "Sign up", new_user_registration_path %></button>
+</div>
