--- a/to_do_app/app/views/welcome/index.html.erb
+++ b/to_do_app/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div id="banner">
-	<h1>ToDo</h1>
-		<p>Keepin' Track of Thingz</p>
+	<h1 class='title'>ToDo</h1>
+		<p id='tagline'>Keepin' Track of Thingz</p>
 		<button id="signup"><%= link_to "Sign up", new_user_registration_path %></button>
 </div>
