--- a/to_do_app/app/views/layouts/application.html.erb
+++ b/to_do_app/app/views/layouts/application.html.erb
@@ -7,16 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<h1 id='logo'><%= link_to image_tag('logo.png'), root_path %></h1>
-	<nav>
+	<div id="index_head">
+		<h1 id='logo'><%= link_to image_tag('logo.png'), root_path %></h1>
+		<nav id='nav'>
 		<% if user_signed_in? %>
 			<%= link_to "New task", new_task_path %>
 			<%= link_to "Sign out", destroy_user_session_path, method: :delete %>
 		<% else %>
 			<%= link_to "Log in", new_user_session_path %>
 		<% end %>
-
-	</nav>
+		</nav>
+	</div>
 
 	<p class="notice"><%= notice %></p>
 	<p class="alert"><%= alert %></p>
