--- a/to_do_app/app/views/tasks/index.html.erb
+++ b/to_do_app/app/views/tasks/index.html.erb
@@ -1,5 +1,5 @@
 <% @tasks.each do |task| %>
-	<h2><%= link_to task.title, task %></h2>
-	<p><%= time_ago_in_words(task.created_at) %></p>
+	<h2 class="title"><%= link_to task.title, task %></h2>
+	<p id='created_at'><%= time_ago_in_words(task.created_at) %></p>
 	<% end %>
 	<%= link_to 'New task', new_task_path %>
